# Dyg

./: CLAUDE.md  CMakeLists.txt  DYNAMICS.md  LICENSE  LIGHTING.md  MATERIALS.md  NOITA-SPEECH.md  PLAYER.md  README.md  REDUNDANCY.md  REDUNDANCY_CLEANUP.md  RENDERING.md  STREAMING_SYSTEM.md  VULKAN_INTEGRATION.md  VULKAN_STATUS.md  VULKAN_TASKS.md  WINDOWS_VULKAN.md  WORLD_GENERATION.md  build.sh  build_vulkan.sh  build_vulkan_simple.sh  build_vulkan_simplified.sh  build_with_shaders.sh  compile_shaders.sh  fire_test  fire_test.cpp  fix_access.sh  fix_access2.sh  fix_freefalling.sh  vulkan_app  vulkan_minimal
.github/workflows/: linux_build.yml  windows-build.yml  windows_build.yml
build_vulkan/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: Character.h  DirectX12Backend.h  Materials.h  OpenGLBackend.h  PhysicsConstants.h  RenderBackend.h  RenderResources.h  Renderer.h  UI.h  VulkanBackend.h  World.h
include/core/: Chunk.h  ChunkManager.h  VoxelData.h  World.h
include/generation/: BiomeGenerator.h  CaveGenerator.h  NoiseGenerator.h  StructureGenerator.h  TerrainGenerator.h
include/physics/: PhysicsSimulator.h
include/util/: Config.h  FileIO.h  ThreadPool.h  Vector3.h
shaders/: basic.frag  basic.vert  material.frag  material.vert
shaders/spirv/: basic.frag.spv  basic.vert.spv  material.frag.spv  material.vert.spv
src/: .Renderer.cpp.swp  .main.cpp.swp  CMakeLists.txt  Character.cpp  ChunkManager.cpp  OpenGLBackend.cpp  RenderBackend.cpp  Renderer.cpp  UI.cpp  VulkanBackend.cpp  VulkanBackend.cpp.bak  World.cpp  World.cpp.backup  World.cpp.bak  World.cpp.orig  main.cpp  main_vulkan.cpp  main_vulkan_minimal.cpp
src/core/: CMakeLists.txt  Chunk.cpp  ChunkManager.cpp  VoxelData.cpp  World.cpp
src/generation/: BiomeGenerator.cpp  CMakeLists.txt  CaveGenerator.cpp  NoiseGenerator.cpp  StructureGenerator.cpp  TerrainGenerator.cpp
src/physics/: CMakeLists.txt  PhysicsSimulator.cpp
src/util/: CMakeLists.txt  Config.cpp  FileIO.cpp  ThreadPool.cpp  Vector3.cpp
vulkan_test/: vulkan_test  vulkan_test.cpp
world_data/chunks/0/: 10.chunk  11.chunk  2.chunk  3.chunk  6.chunk  7.chunk  8.chunk  9.chunk
world_data/chunks/1/: 10.chunk  11.chunk  2.chunk  3.chunk  6.chunk  7.chunk  8.chunk  9.chunk
world_data/chunks/10/: 1.chunk  10.chunk  11.chunk  2.chunk  3.chunk  5.chunk  6.chunk  7.chunk  8.chunk  9.chunk
world_data/chunks/11/: 1.chunk  10.chunk  11.chunk  2.chunk  3.chunk  4.chunk  5.chunk  6.chunk  7.chunk  8.chunk  9.chunk
world_data/chunks/2/: 0.chunk  1.chunk  10.chunk  11.chunk  2.chunk  3.chunk  7.chunk  8.chunk  9.chunk
world_data/chunks/3/: 10.chunk  11.chunk  2.chunk  3.chunk  7.chunk  8.chunk  9.chunk
world_data/chunks/4/: 0.chunk  1.chunk  10.chunk  11.chunk  2.chunk  3.chunk  4.chunk  5.chunk  6.chunk  7.chunk  8.chunk  9.chunk
world_data/chunks/5/: 0.chunk  1.chunk  10.chunk  11.chunk  2.chunk  3.chunk  4.chunk  5.chunk  7.chunk  8.chunk  9.chunk
world_data/chunks/6/: 0.chunk  10.chunk  11.chunk  2.chunk  3.chunk  6.chunk  7.chunk  8.chunk  9.chunk
world_data/chunks/7/: 10.chunk  11.chunk  2.chunk  3.chunk  7.chunk  8.chunk  9.chunk
world_data/chunks/8/: 1.chunk  10.chunk  11.chunk  2.chunk  3.chunk  6.chunk  7.chunk  8.chunk  9.chunk
world_data/chunks/9/: 1.chunk  10.chunk  11.chunk  2.chunk  3.chunk  6.chunk  7.chunk  8.chunk  9.chunk
